# blog-site

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  init.sql  test.env
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
client/: .firebaserc  README.md  package-lock.json  package.json
client/public/: index.html  main.css
client/src/: app.tsx
client/src/components/: About.tsx  Blog.tsx  Header.tsx  Heading.tsx  Navbar.tsx  NotFound.tsx  Post.tsx  Projects.tsx  Resume.tsx  ScrollDown.tsx  footer.tsx  index.ts  (+2 more)
migrations/2021-04-26-184736_create_posts/: up.sql
posts/: 2019-05-01-Hello-World.md  2019-05-01_Hello-World.md  2019-05-02-Getting-Started-With-Jekyll-And-GitHub-Pages.md  2019-05-02_Getting-Started-With-Jekyll-And-GitHub-Pages.md  2019-05-05-Writing-A-Unix-Shell-In-Haskell-0.md  2019-05-05-Writing-A-Unix-Shell-In-Haskell-1.md  2019-05-05_Writing-A-Unix-Shell-In-Haskell-0.md  2019-05-05_Writing-A-Unix-Shell-In-Haskell-1.md  2019-05-06-Writing-A-Unix-Shell-In-Haskell-2.md  2019-05-06_Writing-A-Unix-Shell-In-Haskell-2.md  2019-05-14-Setting-Up-VS-Code-For-Haskell-Development.md  2019-05-14_Setting-Up-VS-Code-For-Haskell-Development.md  2020-03-16-Rack-Cookies-And-Command-Injection.md  2020-03-16_Rack-Cookies-And-Command-Injection.md  2021-04-07_What-The-Heck-Is-An-NFT-Anyways.md  2021-04-14_Facebook-Data-Leak.md
src/: context.rs  lib.rs  main.rs  schema.rs
src/models/: post.rs
src/routes/: home.rs  index.rs  mod.rs  posts.rs
static/css/: styles.css
templates/includes/: footer.html.hbs  nav.html.hbs
templates/layouts/: base.html.hbs
templates/pages/: index.html.hbs
templates/partials/: footer.html.hbs  meta.html.hbs
tests/: tests.rs
(+8 files in other folders)
