[package]
name = "blog-site"
version = "0.1.0"
authors = ["Alexander DuPree <alexander.j.dupree@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json", "diesel_postgres_pool"] }
chrono = { version = "0.4.10", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
