[package]
name = "blog-site"
version = "0.1.0"
authors = ["Alexander DuPree <alexander.j.dupree@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
rocket = "0.4.7"
rocket_cors = "0.5.1"
rocket_contrib = { version = "0.4.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"